@@ -1,6 +1,7 @@
 DFHack Future
     Internals
         Lua scripts can set environment variables of each other with dfhack.run_script_with_env.
+        eventful Lua reactions no longer require LUA_HOOK as a prefix: you can register a callback for the completion of any reaction with a name
     Fixes
         dfhack.run_script should correctly find save-specific scripts now.
     New Plugins
